option ('disable-terminal', type : 'boolean', value : 'false', description : 'Disable built in terminal')
option ('disable-embedded-editor', type : 'boolean', value : 'false', description : 'Disable embedded editor')
option ('disable-libsass', type : 'boolean', value : 'false', description : 'Disable libsass and use sassc')
option ('scss-compiler', type : 'string', value : 'sassc', description : 'SCSS compiler to use when libsass is disabled')
